# tutorial_spacy_custom_span_getter

./: project.yml  pyproject.toml
components/: custom_span_getter.py
configs/: config_trf.cfg
